<resources>
    <string name="app_name">0penMove</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- no sence -->
    <string name="contentDescription">contentDescription</string>
    <string name="textview">TextView</string>

    <!-- tags -->
    <string name="logout">Logout</string>
    <string name="no_internet">No Internet!</string>
    <string name="lianjiezhong">连接中....</string>
    <string name="lianjiezhong_shaohou">连接中..请稍后....</string>

    <string name="tickettouse">TICKET TO USE</string>
    <string name="purchase">Purchase</string>
    <string name="validate">Validate</string>
    <string name="validate_again">Validate again</string>

    <string name="verify">VERIFY</string>
    <string name="verify_belowlogo">Trentino Trasporti S.P.A P.IVA 01807370224</string>

    <string name="road">CIVEZZANO/MOCHENA/SILLE - TRENTO VALSUGANA</string>
    <string name="verifytime">Validated: 02/01/19&#8211;12:39&#8211;TT1552</string>

    <string name="information">INFORMATION</string>
    <string name="addiinfo">ADDITIONAL INFORMATION</string>
    <string name="addiinfocontent">
        Integrated ticket Autonomous Province of Trento.
        \n\nValid for both buses and trains. Can not be used on: Valsugana Railway over Primolano; Brenner Railway over
        Auer and Borghetto and the ascent / descent to the stations of Salurn, Margreid / Kurtatsch, Neumarkt; ES / FA,
        EC, IC and Express trains.
        \n\nTicket is usable until 6 hours after first validation.\n
    </string>

    <string name="validations">VALIDATIONS</string>

    <!-- data -->
    <string name="username">Yu Shen</string>
    <string name="email">shenyu123@gmail.com</string>
    <string name="money">6.60 €</string>
    <string name="trento">TRENTO</string>
    <string name="to">TO</string>

</resources>