<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adpstickets_height_zhengti"
        android:background="#FFFFFF"
        android:orientation="vertical" >

    <RelativeLayout
            android:id="@+id/adp_mytickets_rl_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/adpstickets_height_head" >

        <ImageView
                android:id="@+id/adp_mytickets_isvalid_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>


        <ImageView
                android:id="@+id/adp_mytickets_iv_che"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/fcontent_04_ic_bustype_green1"
                android:scaleType="fitXY"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@id/adp_mytickets_iv_che"
                android:layout_toEndOf="@id/adp_mytickets_iv_che"
                android:layout_toLeftOf="@id/adp_mytickets_iv_gongsi"
                android:layout_toStartOf="@id/adp_mytickets_iv_gongsi"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" >

            <TextView
                    android:id="@+id/adp_mytickets_tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:textColor="#379637"
                    android:textSize="12sp"
                    android:text="@string/textview"/>

            <TextView
                    android:id="@+id/adp_mytickets_tv_scope"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="#646b6b"
                    android:textSize="16sp"
                    android:text="@string/textview"/>

            <TextView
                    android:id="@+id/adp_mytickets_tv_timelimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="#999999"
                    android:textSize="13sp"
                    android:text="@string/textview"/>

        </LinearLayout>

        <ImageView
                android:id="@+id/adp_mytickets_iv_gongsi"
                android:layout_width="118dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/contentDescription"
                android:background="@drawable/ticket_logotrentras_touming"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/adp_mytickets_rl_tail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/adpstickets_height_tail" >

        <ImageView
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gen_img_grey_line"
                android:contentDescription="@string/contentDescription"/>

        <ImageView
                android:id="@+id/adp_mytickets_iv_gouwuche"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:background="@drawable/fcontent_03_ic_qrcode"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

        <TextView
                android:id="@+id/adp_mytickets_tv_validate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/adp_mytickets_iv_gouwuche"
                android:layout_toEndOf="@+id/adp_mytickets_iv_gouwuche"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textColor="#666d6d"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/validate_again" />

    </RelativeLayout>

</LinearLayout>