<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adpstickets_height_zhengti"
        android:background="#FFFFFF"
        android:orientation="vertical" >

    <RelativeLayout
            android:id="@+id/adp_stickets_rl_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/adpstickets_height_head" >

        <ImageView
                android:id="@+id/adp_stickets_iv_che"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/fcontent_03_ic_bustype"
                android:background="@color/color2_fenhongse"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@id/adp_stickets_iv_che"
                android:layout_toEndOf="@id/adp_stickets_iv_che"
                android:layout_toLeftOf="@id/adp_stickets_iv_gongsi"
                android:layout_toStartOf="@id/adp_stickets_iv_gongsi"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" >

            <TextView
                    android:id="@+id/adp_stickets_tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:textColor="@color/color2_fenhongse"
                    android:textSize="12sp"
                    android:text="@string/textview"/>

            <TextView
                    android:id="@+id/adp_stickets_tv_scope"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="#646b6b"
                    android:textSize="16sp"
                    android:text="@string/textview"/>

            <TextView
                    android:id="@+id/adp_stickets_tv_timelimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="#999999"
                    android:textSize="13sp"
                    android:text="@string/textview"/>

        </LinearLayout>

        <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/adp_stickets_iv_gongsi"
                android:background="#c6e1e7"/>
        <ImageView
                android:id="@+id/adp_stickets_iv_gongsi"
                android:layout_width="118dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/contentDescription"
                android:background="@drawable/ticket_logotrentras"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/adp_stickets_rl_tail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/adpstickets_height_tail" >

        <ImageView
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gen_img_grey_line"
                android:contentDescription="@string/contentDescription"/>

        <ImageView
                android:id="@+id/adp_stickets_iv_gouwuche"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ticket_gouwuche"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/adp_stickets_iv_gouwuche"
                android:layout_toEndOf="@+id/adp_stickets_iv_gouwuche"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="#666d6d"
                android:textSize="15sp"
                android:text="@string/purchase" />

        <TextView
                android:id="@+id/adp_stickets_tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:textColor="#666d6d"
                android:textSize="15sp"
                android:text="@string/textview"/>

    </RelativeLayout>

</LinearLayout>